Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -143,7 +143,7 @@
   "dn23:10.5": "„Und wie genau, Stammesfürst?“ ",
   "dn23:10.6": "„Nun, ich habe Freunde und Kollegen, Verwandte und Sippenangehörige, die das Töten lebender Geschöpfe usw. unterlassen. ",
   "dn23:10.7": "Nach einiger Zeit sind sie mitgenommen, leidend, schwer krank. ",
-  "dn23:10.8": "Wenn ich weiß, ",
+  "dn23:10.8": "Wenn ich erkenne, ",
   "dn23:10.9": "dass sie sich von ihrer Krankheit nicht erholen werden, gehe ich zu ihnen und sage: ",
   "dn23:10.10": "‚Ihr Herren, es gibt Asketen und Brahmanen, die diese Doktrin, diese Ansicht haben: ",
   "dn23:10.11": "„Die, die das Töten lebender Geschöpfe usw. unterlassen, werden an einem guten Ort wiedergeboren, in einer himmlischen Welt, unter den Göttern der Dreiunddreißig.“ ",
