--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -180,7 +180,7 @@
   "dn23:11.23": "es gibt keinen ebenen oder unebenen Boden, ",
   "dn23:11.24": "keine Sterne, ",
   "dn23:11.25": "keinen Mond und keine Sonne, und es gibt niemanden, der diese Dinge sieht. ",
-  "dn23:11.26": "Ich kenne und sehe sie nicht, daher gibt es sie nicht.‘ ",
+  "dn23:11.26": "Ich erkenne und sehe sie nicht, daher gibt es sie nicht.‘ ",
   "dn23:11.27": "Würde diese Person richtig sprechen?“ ",
   "dn23:11.28": "„Nein, Meister Kassapa. ",
   "dn23:11.29": "Es gibt so etwas wie dunkle und helle Bilder, und es gibt jemanden, der sie sieht. ",
