--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -186,7 +186,7 @@
   "dn23:11.29": "Es gibt so etwas wie dunkle und helle Bilder, und es gibt jemanden, der sie sieht. ",
   "dn23:11.30": "Auch blaue Bilder … und all die anderen Dinge gibt es, und es gibt jemanden, der sie sieht. ",
   "dn23:11.33": "Daher ist es nicht richtig, zu sagen: ",
-  "dn23:11.34": "‚Ich kenne und sehe sie nicht, daher gibt es sie nicht.‘“ ",
+  "dn23:11.34": "‚Ich erkenne und sehe sie nicht, daher gibt es sie nicht.‘“ ",
   "dn23:11.36": "„Ebenso, Stammesfürst, bist du wie der von Geburt an Blinde in dem Gleichnis, wenn du sagst, du glaubst mir nicht. ",
   "dn23:11.41": "Jene Welt kann man nicht so sehen, wie du denkst, mit dem fleischlichen Auge. ",
   "dn23:11.42": "Es gibt Asketen und Brahmanen, die in der Wildnis leben und abgelegene Unterkünfte in der Wildnis und im Wald aufsuchen. Sie meditieren beflissen, eifrig und entschlossen und läutern so ihre Hellsichtigkeit, das göttliche Auge. ",
