--- a/translation/de/sabbamitta/sutta/an/an4/an4.194_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.194_translation-de-sabbamitta.json
@@ -24,5 +24,5 @@
   "an4.194:6.3": "Während er das tut, erfährt er vollkommene Freiheit. ",
   "an4.194:6.4": "Das nennt man Reinheit der Freiheit. ",
   "an4.194:6.5": "Er denkt: ‚Ich will diese Reinheit der Freiheit erfüllen, oder, wenn sie bereits erfüllt ist, will ich sie in jedem Moment mit Weisheit stärken.‘ Seine Begeisterung dafür und seine und Mühe, sein Eifer, seine Tatkraft, Beharrlichkeit, Achtsamkeit und Umsicht – das nennt man den Faktor des Bemühens um Reinheit der Freiheit. ",
-  "an4.194:7.1": "Diese vier Faktoren des Bemühens um Reinheit sind vom Gesegneten, der weiß und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt worden: um die Wesen zu läutern, Kummer und Weinen zu überwinden, Schmerz und Traurigkeit ein Ende zu machen, den Kreislauf des Leidens zu beenden und das Erlöschen zu verwirklichen.“ "
+  "an4.194:7.1": "Diese vier Faktoren des Bemühens um Reinheit sind vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt worden: um die Wesen zu läutern, Kummer und Weinen zu überwinden, Schmerz und Traurigkeit ein Ende zu machen, den Kreislauf des Leidens zu beenden und das Erlöschen zu verwirklichen.“ "
 }
