--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "sn12.18:2.9": "„Nun, gibt es so etwas wie Glück und Schmerz nicht?“ ",
   "sn12.18:2.10": "„Es ist nicht so, dass es Glück und Schmerz nicht gäbe. ",
   "sn12.18:2.11": "Glück und Schmerz sind wirklich.“ ",
-  "sn12.18:2.12": "„Dann kennt Meister Gotama Glück und Schmerz nicht und sieht sie nicht.“ ",
+  "sn12.18:2.12": "„Dann erkennt und sieht Meister Gotama Glück und Schmerz nicht.“ ",
   "sn12.18:2.13": "„Es ist nicht so, dass ich Glück und Schmerz nicht kennen oder sehen würde. ",
   "sn12.18:2.14": "Ich kenne Glück und Schmerz, ",
   "sn12.18:2.15": "ich sehe Glück und Schmerz.“ ",
