Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "sn12.18:3.5": "Und doch sagst du, es gebe so etwas wie Glück und Schmerz. ",
   "sn12.18:3.6": " ",
   "sn12.18:3.7": " ",
-  "sn12.18:3.8": "Und du sagst, du kennst Glück und Schmerz ",
+  "sn12.18:3.8": "Und du sagst, du erkennst Glück und Schmerz ",
   "sn12.18:3.9": "und du siehst Glück und Schmerz. ",
   "sn12.18:3.10": "Herr, erkläre mir Glück und Schmerz! ",
   "sn12.18:3.11": "Unterweise mich über Glück und Schmerz!“ ",
