Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json
@@ -20,7 +20,7 @@
   "sn12.18:2.13": "„Es ist nicht so, dass ich Glück und Schmerz nicht erkennen oder sehen würde. ",
   "sn12.18:2.14": "Ich erkenne Glück und Schmerz, ",
   "sn12.18:2.15": "ich sehe Glück und Schmerz.“ ",
-  "sn12.18:3.1": "„Meister Gotama, wenn du so gefragt wirst, sagst du ‚so nicht‘. ",
+  "sn12.18:3.1": "„Meister Gotama, wenn du all das gefragt wirst, sagst du ‚so nicht‘. ",
   "sn12.18:3.2": " ",
   "sn12.18:3.3": " ",
   "sn12.18:3.4": " ",
