--- a/translation/de/sabbamitta/sutta/an/an6/an6.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.26_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an6.26:1.4": "Der Ehrwürdige Mahākaccāna sagte: ",
   "an6.26:1.5": "„Es ist unglaublich, verehrte Freunde, ",
   "an6.26:1.6": "es ist erstaunlich, ",
-  "an6.26:1.7": "wie der Gesegnete, der weiß und sieht, der Vollendete, der vollkommen erwachte Buddha eine Öffnung in einem abgeschlossenen Raum gefunden hat, um die Wesen zu läutern, Kummer und Weinen zu überwinden, Schmerz und Traurigkeit ein Ende zu machen, den Kreislauf des Leidens zu beenden und das Erlöschen zu verwirklichen: nämlich die sechs Gegenstände zur Besinnung. ",
+  "an6.26:1.7": "wie der Gesegnete, der erkennt und sieht, der Vollendete, der vollkommen erwachte Buddha eine Öffnung in einem abgeschlossenen Raum gefunden hat, um die Wesen zu läutern, Kummer und Weinen zu überwinden, Schmerz und Traurigkeit ein Ende zu machen, den Kreislauf des Leidens zu beenden und das Erlöschen zu verwirklichen: nämlich die sechs Gegenstände zur Besinnung. ",
   "an6.26:2.1": "Welche sechs? ",
   "an6.26:2.2": "Da besinnt sich zunächst ein edler Schüler auf den Klargewordenen: ",
   "an6.26:2.3": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, höchster Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
