--- a/translation/de/sabbamitta/sutta/an/an6/an6.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.26_translation-de-sabbamitta.json
@@ -39,5 +39,5 @@
   "an6.26:7.11": "Dieser edle Schüler meditiert mit einem Herzen, ganz wie der Raum – weit, ausgedehnt, grenzenlos, frei von Feindschaft und bösem Willen. ",
   "an6.26:7.12": "Indem sie sich darauf stützen, werden manche Lebewesen so rein. ",
   "an6.26:8.1": "Es ist unglaublich, es ist erstaunlich, ",
-  "an6.26:8.2": "wie der Gesegnete, der weiß und sieht, der Vollendete, der vollkommen erwachte Buddha eine Öffnung in einem abgeschlossenen Raum gefunden hat, um die Wesen zu läutern, Kummer und Weinen zu überwinden, Schmerz und Traurigkeit ein Ende zu machen, den Kreislauf des Leidens zu beenden und das Erlöschen zu verwirklichen: nämlich die sechs Gegenstände zur Besinnung.“ "
+  "an6.26:8.2": "wie der Gesegnete, der erkennt und sieht, der Vollendete, der vollkommen erwachte Buddha eine Öffnung in einem abgeschlossenen Raum gefunden hat, um die Wesen zu läutern, Kummer und Weinen zu überwinden, Schmerz und Traurigkeit ein Ende zu machen, den Kreislauf des Leidens zu beenden und das Erlöschen zu verwirklichen: nämlich die sechs Gegenstände zur Besinnung.“ "
 }
