--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.17_translation-de-sabbamitta.json
@@ -32,7 +32,7 @@
   "sn12.17:3.10": "„Es ist nicht so, dass es kein Leiden gäbe. ",
   "sn12.17:3.11": "Leiden ist wirklich.“ ",
   "sn12.17:3.12": "„Dann erkennt und sieht Meister Gotama das Leiden nicht.“ ",
-  "sn12.17:3.13": "„Es ist nicht so, dass ich das Leiden nicht kennen oder sehen würde. ",
+  "sn12.17:3.13": "„Es ist nicht so, dass ich das Leiden nicht erkennen oder sehen würde. ",
   "sn12.17:3.14": "Ich kenne das Leiden, ",
   "sn12.17:3.15": "ich sehe das Leiden.“ ",
   "sn12.17:4.1": "„Meister Gotama, wenn du so gefragt wirst, sagst du ‚so nicht‘. ",
