Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.17_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.17_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "sn12.17:3.13": "„Es ist nicht so, dass ich das Leiden nicht erkennen oder sehen würde. ",
   "sn12.17:3.14": "Ich erkenne das Leiden, ",
   "sn12.17:3.15": "ich sehe das Leiden.“ ",
-  "sn12.17:4.1": "„Meister Gotama, wenn du so gefragt wirst, sagst du ‚so nicht‘. ",
+  "sn12.17:4.1": "„Meister Gotama, wenn du all das gefragt wirst, sagst du ‚so nicht‘. ",
   "sn12.17:4.2": " ",
   "sn12.17:4.3": " ",
   "sn12.17:4.4": " ",
