Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.17_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.17_translation-de-sabbamitta.json
@@ -41,7 +41,7 @@
   "sn12.17:4.4": " ",
   "sn12.17:4.5": "Und doch sagst du, es gebe so etwas wie Leiden. ",
   "sn12.17:4.6": " ",
-  "sn12.17:4.7": "Und du sagst, du kennst das Leiden ",
+  "sn12.17:4.7": "Und du sagst, du erkennst das Leiden ",
   "sn12.17:4.8": "und du siehst das Leiden. ",
   "sn12.17:4.9": "Herr, erkläre mir das Leiden! ",
   "sn12.17:4.10": "Unterweise mich über das Leiden!“ ",
