--- a/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an10.24:1.4": "„Werter Freund“, antworteten sie. ",
   "an10.24:1.5": "Der Ehrwürdige Mahācunda sagte: ",
   "an10.24:2.1": "„Werte Freunde, ein Mönch, der seine Erkenntnis erklärt, sagt: ",
-  "an10.24:2.2": "‚Ich kenne diese Lehre, ich sehe diese Lehre.‘ ",
+  "an10.24:2.2": "‚Ich erkenne diese Lehre, ich sehe diese Lehre.‘ ",
   "an10.24:2.3": "Angenommen, Gier beherrscht diesen Mönch und hält an; ",
   "an10.24:2.4": "oder Hass … ",
   "an10.24:2.5": "Täuschung … ",
