--- a/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "an10.24:3.21": "das böse Eifersucht beseitigen würde … ",
   "an10.24:3.22": "oder das unlautere Wünsche beseitigen würde, daher beherrschen unlautere Wünsche ihn und halten an.‘ ",
   "an10.24:4.1": "Ein Mönch, der sowohl seine Erkenntnis als auch seine Entwicklung erklärt, sagt: ",
-  "an10.24:4.2": "‚Ich kenne diese Lehre, ich sehe diese Lehre. Und ich habe mein körperliches Durchhaltevermögen, mein sittliches Verhalten, meinen Geist und meine Weisheit entwickelt.‘ ",
+  "an10.24:4.2": "‚Ich erkenne diese Lehre, ich sehe diese Lehre. Und ich habe mein körperliches Durchhaltevermögen, mein sittliches Verhalten, meinen Geist und meine Weisheit entwickelt.‘ ",
   "an10.24:4.3": "Angenommen, Gier beherrscht diesen Mönch und hält an; ",
   "an10.24:4.4": "oder Hass … ",
   "an10.24:4.5": "Täuschung … ",
