--- a/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
@@ -80,7 +80,7 @@
   "an10.24:5.5": "Und warum? ",
   "an10.24:5.6": "Weil er, als eine Zahlung fällig wurde, nicht in der Lage war, Geld, Korn, Silber oder Gold beizubringen. ",
   "an10.24:6.1": "Ebenso ist es mit einem Mönch, der sowohl seine Erkenntnis als auch seine Entwicklung erklärt und sagt: ",
-  "an10.24:6.2": "‚Ich kenne diese Lehre, ich sehe diese Lehre. Und ich habe mein körperliches Durchhaltevermögen, mein sittliches Verhalten, meinen Geist und meine Weisheit entwickelt.‘ ",
+  "an10.24:6.2": "‚Ich erkenne diese Lehre, ich sehe diese Lehre. Und ich habe mein körperliches Durchhaltevermögen, mein sittliches Verhalten, meinen Geist und meine Weisheit entwickelt.‘ ",
   "an10.24:6.3": "Angenommen, Gier beherrscht diesen Mönch und hält an; ",
   "an10.24:6.4": "oder Hass … ",
   "an10.24:6.5": "Täuschung … ",
