Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
@@ -102,7 +102,7 @@
   "an10.24:6.21": "das böse Eifersucht beseitigen würde … ",
   "an10.24:6.22": "oder das unlautere Wünsche beseitigen würde, daher beherrschen unlautere Wünsche ihn und halten an.‘ ",
   "an10.24:7.1": "Ein Mönch, der seine Erkenntnis erklärt, sagt: ",
-  "an10.24:7.2": "‚Ich kenne diese Lehre, ich sehe diese Lehre.‘ ",
+  "an10.24:7.2": "‚Ich erkenne diese Lehre, ich sehe diese Lehre.‘ ",
   "an10.24:7.3": "Angenommen, Gier beherrscht diesen Mönch nicht und hält nicht an; ",
   "an10.24:7.4": "oder Hass … ",
   "an10.24:7.5": "Täuschung … ",
