Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
@@ -146,7 +146,7 @@
   "an10.24:8.21": "das böse Eifersucht beseitigt … ",
   "an10.24:8.22": "und das unlautere Wünsche beseitigt, daher beherrschen unlautere Wünsche ihn nicht und halten nicht an.‘ ",
   "an10.24:9.1": "Ein Mönch, der sowohl seine Erkenntnis als auch seine Entwicklung erklärt, sagt: ",
-  "an10.24:9.2": "‚Ich kenne diese Lehre, ich sehe diese Lehre. Und ich habe mein körperliches Durchhaltevermögen, mein sittliches Verhalten, meinen Geist und meine Weisheit entwickelt.‘ ",
+  "an10.24:9.2": "‚Ich erkenne diese Lehre, ich sehe diese Lehre. Und ich habe mein körperliches Durchhaltevermögen, mein sittliches Verhalten, meinen Geist und meine Weisheit entwickelt.‘ ",
   "an10.24:9.3": "Angenommen, Gier beherrscht diesen Mönch nicht und hält nicht an; ",
   "an10.24:9.4": "oder Hass … ",
   "an10.24:9.5": "Täuschung … ",
