Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -440,7 +440,7 @@
   "dn33:1.11.198": "Weitere vier edle Redeweisen: ",
   "dn33:1.11.199": "sagen, dass man nicht gesehen, nicht gehört, nicht gedacht und nicht erkannt hat, was man nicht gesehen, nicht gehört, nicht gedacht und nicht erkannt hat. ",
   "dn33:1.11.200": "Weitere vier unedle Redeweisen: ",
-  "dn33:1.11.201": "sagen, man habe nicht gesehen, nicht gehört, nicht gedacht und nicht gewusst, was man gesehen, gehört, gedacht oder gewusst hat. ",
+  "dn33:1.11.201": "sagen, man habe nicht gesehen, nicht gehört, nicht gedacht und nicht erkannt, was man gesehen, gehört, gedacht oder erkannt hat. ",
   "dn33:1.11.202": "Weitere vier edle Redeweisen: ",
   "dn33:1.11.203": "sagen, dass man gesehen, gehört, gedacht oder gewusst hat, was man gesehen, gehört, gedacht oder gewusst hat. ",
   "dn33:1.11.204": "Vier Menschen: ",
