Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.183_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.183_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.183_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "an4.183:2.7": "‚So habe ich es gedacht.‘ ",
   "an4.183:2.8": "Da ist nichts falsch, wenn man über das spricht, was man erkannt hat: ",
   "an4.183:2.9": "‚So habe ich es erkannt.‘“ ",
-  "an4.183:3.1": "„Brahmane, ich sage nicht, man soll über alles sprechen, was man sieht, hört, denkt und weiß. ",
+  "an4.183:3.1": "„Brahmane, ich sage nicht, man soll über alles sprechen, was man sieht, hört, denkt und erkennt. ",
   "an4.183:3.2": "Aber ich sage auch nicht, man soll über nichts sprechen, was man sieht, hört, denkt und weiß. ",
   "an4.183:3.3": " ",
   "an4.183:3.4": " ",
