Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.183_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.183_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.183_translation-de-sabbamitta.json
@@ -22,7 +22,7 @@
   "an4.183:3.6": " ",
   "an4.183:3.7": " ",
   "an4.183:3.8": " ",
-  "an4.183:4.1": "Wenn man über gewisse Dinge spricht, die man gesehen, gehört, gedacht oder gewusst hat, wachsen untaugliche Eigenschaften an und taugliche Eigenschaften verkümmern. Ich sage, über diese Dinge soll man nicht sprechen. ",
+  "an4.183:4.1": "Wenn man über gewisse Dinge spricht, die man gesehen, gehört, gedacht oder erkannt hat, wachsen untaugliche Eigenschaften an und taugliche Eigenschaften verkümmern. Ich sage, über diese Dinge soll man nicht sprechen. ",
   "an4.183:4.2": "Wenn man über andere Dinge spricht, die man gesehen, gehört, gedacht oder gewusst hat, verkümmern untaugliche Eigenschaften und taugliche Eigenschaften wachsen an. Ich sage, über diese Dinge soll man sprechen.“ ",
   "an4.183:5.1": " ",
   "an4.183:5.2": " ",
