Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -11,5 +11,5 @@
   "mn3:2.2": "મારામાં તમારા માટે એવી અનુકંપા છે:",
   "mn3:2.3": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’.",
   "mn3:2.4": "ધારોકે ભિક્ષુઓ, તમે માલમિલ્કતમાં મારા વારસદાર બનો, ધર્મમાં નહીં, તો બીજા લોકો તમને જોઇને કહે:",
-  "mn3:2.5": "‘આ સાધકો માલમિલ્કતમાં વારસદાર છે, ધર્મમાં નથી’."
+  "mn3:2.5": "‘આ ગુરુના સાધકો માલમિલ્કતના વારસદાર હોય એમ રહે છે, ધર્મના નહીં’."
 }
