Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "an8.2:8.7": "Das ist der achte Grund. ",
   "an8.2:9.1": "Seine geistlichen Gefährten schätzen ihn: ",
   "an8.2:9.2": "‚Dieser Ehrwürdige lebt, indem er sich auf den Lehrer oder einen geistlichen Gefährten in der Lehrerrolle stützt. Und er entwickelt ihnen gegenüber einen ausgeprägten Sinn für Gewissen und Besonnenheit mit Herzlichkeit und Achtung. ",
-  "an8.2:9.3": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
+  "an8.2:9.3": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:9.4": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:10.1": "‚Dieser Ehrwürdige lebt so mit dem Lehrer oder einem geistlichen Gefährten in der Lehrerrolle und geht von Zeit zu Zeit hin und stellt Fragen … ",
   "an8.2:10.4": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
