Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
@@ -33,7 +33,7 @@
   "an8.2:9.3": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:9.4": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:10.1": "‚Dieser Ehrwürdige lebt so mit dem Lehrer oder einem geistlichen Gefährten in der Lehrerrolle und geht von Zeit zu Zeit hin und stellt Fragen … ",
-  "an8.2:10.4": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
+  "an8.2:10.4": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:10.5": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:11.1": "‚Wenn er diese Lehre gehört hat, vervollkommnet dieser Ehrwürdige den Rückzug mit dem Körper und dem Geist. ",
   "an8.2:11.2": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
