--- a/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
@@ -36,7 +36,7 @@
   "an8.2:10.4": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:10.5": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:11.1": "‚Wenn er diese Lehre gehört hat, vervollkommnet dieser Ehrwürdige den Rückzug mit dem Körper und dem Geist. ",
-  "an8.2:11.2": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
+  "an8.2:11.2": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:11.3": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:12.1": "‚Dieser Ehrwürdige ist sittlich … ",
   "an8.2:12.2": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
