--- a/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "an8.2:11.2": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:11.3": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:12.1": "‚Dieser Ehrwürdige ist sittlich … ",
-  "an8.2:12.2": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
+  "an8.2:12.2": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:12.3": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:13.1": "‚Dieser Ehrwürdige ist sehr gelehrt, erinnert und behält, was er gehört hat. … ",
   "an8.2:13.2": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
