Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "an8.2:14.3": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:15.1": "‚Wenn er im Saṅgha ist, lässt dieser Ehrwürdige sich nicht auf Gespräche über alles Mögliche oder auf alberne Gespräche ein. ",
   "an8.2:15.2": "Entweder spricht er über den Dhamma oder er lädt jemand anderen ein, das zu tun, oder er hält edles Schweigen ein. ",
-  "an8.2:15.3": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
+  "an8.2:15.3": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:15.4": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:16.1": "‚Dieser Ehrwürdige meditiert, indem er das Entstehen und Vergehen bei den fünf mit Ergreifen verbundenen Aggregaten beobachtet … ",
   "an8.2:16.7": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
