--- a/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.2_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "an8.2:15.3": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:15.4": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:16.1": "‚Dieser Ehrwürdige meditiert, indem er das Entstehen und Vergehen bei den fünf mit Ergreifen verbundenen Aggregaten beobachtet … ",
-  "an8.2:16.7": "Sicher weiß und sieht dieser Ehrwürdige.‘ ",
+  "an8.2:16.7": "Sicher erkennt und sieht dieser Ehrwürdige.‘ ",
   "an8.2:16.8": "Diese Eigenschaft führt zu Zuneigung, Achtung, Wertschätzung, Eintracht und Einigkeit. ",
   "an8.2:17.1": "Das sind die acht Gründe und Anlässe, die dazu führen, dass man die Weisheit, die grundlegend für das geistliche Leben ist, erwirbt, und wenn man sie erworben hat, dazu, dass sie anwächst, reift und sich vollständig entwickelt.“ "
 }
