Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "sn22.55:9.1": "‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein‘ – ",
   "sn22.55:9.2": "weil Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein verschwinden werden, ",
   "sn22.55:9.3": "deshalb kann ein Mönch, der sich dieses fest vornimmt, die fünf niederen Fesseln durchtrennen.“ ",
-  "sn22.55:9.4": "„Herr, ein Mönch, der sich dieses fest vornimmt, kann die fünf niederen Fesseln durchtrennen. "
+  "sn22.55:9.4": "„Herr, ein Mönch, der sich dieses fest vornimmt, kann die fünf niederen Fesseln durchtrennen. ",
+  "sn22.55:10.1": "Aber wie soll er erkennen und sehen, um die Befleckungen in diesem Leben aufzulösen?“ "
 }
