--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -14,5 +14,5 @@
   "mn3:2.5": "‘આ ગુરુના સાધકો માલમિલ્કતના વારસદાર હોય એમ રહે છે, ધર્મના વારસદાર તરીકે નહીં’.",
   "mn3:2.6": "અને મને જોઇને કહેશે:",
   "mn3:2.7": "‘આ ગુરુના સાધકો માલમિલ્કતના વારસદાર હોય એમ રહે છે, ધર્મના વારસદાર તરીકે નહીં’.",
-  "mn3:2.8": "ધારોકે ભિક્ષુઓ, તમે માલમિલ્કતમાં મારા વારસદાર બનો, ધર્મમાં નહીં, તો બીજા લોકો તમને જોઇને કહે:"
+  "mn3:2.8": "ધારોકે ભિક્ષુઓ, તમે ધર્મમાં મારા વારસદાર બનો, માલમિલ્કતમાં નહીં, તો બીજા લોકો તમને જોઇને કહે:"
 }
