--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -15,5 +15,6 @@
   "mn3:2.6": "અને મને જોઇને કહેશે:",
   "mn3:2.7": "‘આ ગુરુના સાધકો માલમિલ્કતના વારસદાર હોય એમ રહે છે, ધર્મના વારસદાર તરીકે નહીં’.",
   "mn3:2.8": "ધારોકે ભિક્ષુઓ, તમે ધર્મમાં મારા વારસદાર બનો, માલમિલ્કતમાં નહીં, તો બીજા લોકો તમને જોઇને કહે:",
-  "mn3:2.9": "‘આ ગુરુના સાધકો ધર્મના વારસદાર હોય એમ રહે છે, માલમિલ્કતના વારસદાર તરીકેનહીં’."
+  "mn3:2.9": "‘આ ગુરુના સાધકો ધર્મના વારસદાર હોય એમ રહે છે, માલમિલ્કતના વારસદાર તરીકેનહીં’.",
+  "mn3:2.10": "અને મને જોઇને કહેશે:"
 }
