--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -19,5 +19,6 @@
   "mn3:2.10": "અને મને જોઇને કહેશે:",
   "mn3:2.11": "‘આ ગુરુના સાધકો ધર્મના વારસદાર હોય એમ રહે છે, માલમિલ્કતના વારસદાર તરીકે નહીં’.",
   "mn3:2.12": "“એટલા માટે ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં.",
-  "mn3:2.13": "મારામાં તમારા માટે એવી અનુકંપા છે:"
+  "mn3:2.13": "મારામાં તમારા માટે એવી અનુકંપા છે:",
+  "mn3:2.14": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’."
 }
