Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -20,5 +20,6 @@
   "mn3:2.11": "‘આ ગુરુના સાધકો ધર્મના વારસદાર હોય એમ રહે છે, માલમિલ્કતના વારસદાર તરીકે નહીં’.",
   "mn3:2.12": "“એટલા માટે ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં.",
   "mn3:2.13": "મારામાં તમારા માટે એવી અનુકંપા છે:",
-  "mn3:2.14": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’."
+  "mn3:2.14": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’.",
+  "mn3:3.1": "ઘારોકે, ભિક્ષુઓ, મેં ખાધું હોય અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું હોય;"
 }
