--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -21,5 +21,6 @@
   "mn3:2.12": "“એટલા માટે ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં.",
   "mn3:2.13": "મારામાં તમારા માટે એવી અનુકંપા છે:",
   "mn3:2.14": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’.",
-  "mn3:3.1": "ઘારોકે, ભિક્ષુઓ, મેં ખાધું હોય અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું હોય;"
+  "mn3:3.1": "ઘારોકે, ભિક્ષુઓ, મેં ખાધું હોય અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું હોય;",
+  "mn3:3.2": "અને મારી પાસે ભિક્ષાન્ન વધ્યુ હોય જે ફેંકી દેવાનું હોય."
 }
