--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -4,14 +4,14 @@
   "pli-tv-kd10:0.3": "The chapter about Kosambī ",
   "pli-tv-kd10:0.4": "1. The account of the dispute at Kosambī ",
   "pli-tv-kd10:1.1.1": "At one time when the Buddha was staying at Kosambī in Ghosita’s Monastery,  ",
-  "pli-tv-kd10:1.1.2": "At this time a certain monk had committed an offense. ",
-  "pli-tv-kd10:1.1.3": "He regarded that offense as an offense, ",
+  "pli-tv-kd10:1.1.2": "a certain monk had committed an offense. ",
+  "pli-tv-kd10:1.1.3": "He regarded it as an offense, ",
   "pli-tv-kd10:1.1.4": "but there were other monks who did not. ",
   "pli-tv-kd10:1.1.5": "Some time later he no longer regarded it as an offense, ",
   "pli-tv-kd10:1.1.6": "but there were other monks who did. ",
   "pli-tv-kd10:1.1.7": "They said to him, ",
-  "pli-tv-kd10:1.1.8": "“You have committed an offense. Do you recognize it?” ",
-  "pli-tv-kd10:1.1.9": "“I haven’t committed any offense that I should recognize.” ",
+  "pli-tv-kd10:1.1.8": "“You’ve committed an offense. Do you recognize it?” ",
+  "pli-tv-kd10:1.1.9": "“No, I haven’t committed any offense that I should recognize.” ",
   "pli-tv-kd10:1.1.10": "Soon afterwards the monks achieved unanimity and they ejected that monk for not recognizing the offense. ",
   "pli-tv-kd10:1.2.1": "But that monk was learned and a master of the tradition; he was an expert on the Teaching, the Monastic Law, and the Key Terms; he was knowledgeable and competent, had a sense of conscience, and was afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd10:1.2.2": "He went to his friends and said, ",
@@ -311,7 +311,7 @@
   "pli-tv-kd10:3.1.29": "Those plundering the country, ",
   "pli-tv-kd10:3.1.30": "Even they can stay together—",
   "pli-tv-kd10:3.1.31": "Why then cannot you? ",
-  "pli-tv-kd10:3.1.32": "If you get a discerning friend, ",
+  "pli-tv-kd10:3.1.32": "If you find a discerning friend, ",
   "pli-tv-kd10:3.1.33": "A steadfast companion, good to live with, ",
   "pli-tv-kd10:3.1.34": "Then overcome all problems, ",
   "pli-tv-kd10:3.1.35": "And go with them, glad and mindful. ",
