Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -315,7 +315,7 @@
   "pli-tv-kd10:3.1.33": "A steadfast companion, good to live with, ",
   "pli-tv-kd10:3.1.34": "Then overcome all problems, ",
   "pli-tv-kd10:3.1.35": "And go with them, glad and mindful. ",
-  "pli-tv-kd10:3.1.36": "If you do not get a discerning friend, ",
+  "pli-tv-kd10:3.1.36": "If you do not find a discerning friend, ",
   "pli-tv-kd10:3.1.37": "A steadfast companion, good to live with, ",
   "pli-tv-kd10:3.1.38": "Then like a king giving up his kingdom, ",
   "pli-tv-kd10:3.1.39": "Wander alone like a bull elephant in the forest. ",
