Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -318,7 +318,7 @@
   "pli-tv-kd10:3.1.36": "If you do not find a discerning friend, ",
   "pli-tv-kd10:3.1.37": "A steadfast companion, good to live with, ",
   "pli-tv-kd10:3.1.38": "Then like a king giving up his kingdom, ",
-  "pli-tv-kd10:3.1.39": "Wander alone like a bull elephant in the forest. ",
+  "pli-tv-kd10:3.1.39": "Wander alone like a mighty elephant in the forest. ",
   "pli-tv-kd10:3.1.40": "It’s better to wander alone, ",
   "pli-tv-kd10:3.1.41": "For there is no friendship with fools. ",
   "pli-tv-kd10:3.1.42": "Wander alone and do no bad, ",
