Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -322,7 +322,7 @@
   "pli-tv-kd10:3.1.40": "It’s better to wander alone, ",
   "pli-tv-kd10:3.1.41": "For there is no friendship with fools. ",
   "pli-tv-kd10:3.1.42": "Wander alone and do no bad, ",
-  "pli-tv-kd10:3.1.43": "Unconcerned, like a bull elephant in the forest.” ",
+  "pli-tv-kd10:3.1.43": "Unconcerned, like a mighty elephant in the forest.” ",
   "pli-tv-kd10:4.1.0": "3. The account of going to Bālakaloṇaka ",
   "pli-tv-kd10:4.1.1": "After speaking these verses while standing in the midst of the Sangha, the Buddha went to the village of Bālakaloṇaka. ",
   "pli-tv-kd10:4.1.2": "At that time Venerable Bhagu was staying near that village. ",
