Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -298,7 +298,7 @@
   "pli-tv-kd10:3.1.16": "They defeated me, they robbed me.’ ",
   "pli-tv-kd10:3.1.17": "For those who do not carry on like this, ",
   "pli-tv-kd10:3.1.18": "Hatred has an end. ",
-  "pli-tv-kd10:3.1.19": "For never is hatred ",
+  "pli-tv-kd10:3.1.19": "For never does hatred ",
   "pli-tv-kd10:3.1.20": "Stopped by hatred; ",
   "pli-tv-kd10:3.1.21": "Only by love does it stop—",
   "pli-tv-kd10:3.1.22": "This is an ancient law. ",
