Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -299,11 +299,11 @@
   "pli-tv-kd10:3.1.17": "For those who do not carry on like this, ",
   "pli-tv-kd10:3.1.18": "Hatred has an end. ",
   "pli-tv-kd10:3.1.19": "For never does hatred ",
-  "pli-tv-kd10:3.1.20": "Stopped by hatred; ",
-  "pli-tv-kd10:3.1.21": "Only by love does it stop—",
+  "pli-tv-kd10:3.1.20": "End through hatred; ",
+  "pli-tv-kd10:3.1.21": "Only through love does it end—",
   "pli-tv-kd10:3.1.22": "This is an ancient law. ",
   "pli-tv-kd10:3.1.23": "Others do not know ",
-  "pli-tv-kd10:3.1.24": "That here we need restraint. ",
+  "pli-tv-kd10:3.1.24": "That here we need restraint; ",
   "pli-tv-kd10:3.1.25": "But for those who know, ",
   "pli-tv-kd10:3.1.26": "The quarrels have an end. ",
   "pli-tv-kd10:3.1.27": "Those breaking bones and killing, ",
