Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -304,7 +304,7 @@
   "pli-tv-kd10:3.1.22": "This is an ancient law. ",
   "pli-tv-kd10:3.1.23": "Others do not know ",
   "pli-tv-kd10:3.1.24": "That here we need restraint; ",
-  "pli-tv-kd10:3.1.25": "But for those who know, ",
+  "pli-tv-kd10:3.1.25": "But there are those there who know,  ",
   "pli-tv-kd10:3.1.26": "The quarrels have an end. ",
   "pli-tv-kd10:3.1.27": "Those breaking bones and killing, ",
   "pli-tv-kd10:3.1.28": "Those taking cows, horses, and wealth, ",
