--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -305,7 +305,7 @@
   "pli-tv-kd10:3.1.23": "Others do not know ",
   "pli-tv-kd10:3.1.24": "That here we need restraint; ",
   "pli-tv-kd10:3.1.25": "But there are those there who know,  ",
-  "pli-tv-kd10:3.1.26": "The quarrels have an end. ",
+  "pli-tv-kd10:3.1.26": "That quarrels end like this. ",
   "pli-tv-kd10:3.1.27": "Those breaking bones and killing, ",
   "pli-tv-kd10:3.1.28": "Those taking cows, horses, and wealth, ",
   "pli-tv-kd10:3.1.29": "Those plundering the country, ",
