Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -280,7 +280,7 @@
   "pli-tv-kd10:2.20.13": "“These foolish men are consumed by emotions. It’s not easy to persuade them,” ",
   "pli-tv-kd10:2.20.14": "and he got up from his seat and left. ",
   "pli-tv-kd10:2.20.15": "The first section for recitation on Dīghāvu is finished. ",
-  "pli-tv-kd10:3.1.1": "After robing up in the morning, the Buddha took his bowl and robe and entered Kosambī for alms. ",
+  "pli-tv-kd10:3.1.1": "Then, after robing up in the morning, the Buddha took his bowl and robe and entered Kosambī for alms. ",
   "pli-tv-kd10:3.1.2": "He walked for alms and had his meal, and after returning from almsround, he put his dwelling in order. He then took his bowl and robe, and while standing in the midst of the Sangha, he spoke these verses: ",
   "pli-tv-kd10:3.1.3": "“When many voices shout at once, ",
   "pli-tv-kd10:3.1.4": "No-one thinks they are a fool. ",
