--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -272,7 +272,7 @@
   "pli-tv-kd10:2.20.5": "But right here, you, who have gone forth on this well-proclaimed spiritual path, shine when you are patient and gentle.” ",
   "pli-tv-kd10:2.20.6": "A third time the Buddha said to those monks, ",
   "pli-tv-kd10:2.20.7": "“Enough, monks, don’t quarrel and dispute.” ",
-  "pli-tv-kd10:2.20.8": "And for third time that monk who spoke contrary to the Teaching replied, ",
+  "pli-tv-kd10:2.20.8": "And a third time that monk who spoke contrary to the Teaching replied, ",
   "pli-tv-kd10:2.20.9": "“Wait, Sir. You are the Lord of the Teaching. ",
   "pli-tv-kd10:2.20.10": "There is no need for you to be concerned. Just enjoy the happiness of the present life. ",
   "pli-tv-kd10:2.20.11": "We’ll face the consequences of this quarreling and disputing.” ",
