Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -265,7 +265,7 @@
   "pli-tv-kd10:2.19.11": "In this way the hatred would never end through hatred. ",
   "pli-tv-kd10:2.19.12": "But now you have spared my life and I’ve spared yours. ",
   "pli-tv-kd10:2.19.13": "In this way hatred ends through love.’ ",
-  "pli-tv-kd10:2.20.1": "The King thought, ",
+  "pli-tv-kd10:2.20.1": "The king thought, ",
   "pli-tv-kd10:2.20.2": "‘It’s amazing ",
   "pli-tv-kd10:2.20.3": "how wise Dīghāvu is, in that he’s able to fully understand the meaning of his father’s brief statement.’ And he gave him back his father’s army, his vehicles and transport animals, and his country and wealth, and he also gave him his own daughter. ",
   "pli-tv-kd10:2.20.4": "In this way, monks, those kings who had the authority to punish were actually patient and gentle. ",
