Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -263,7 +263,7 @@
   "pli-tv-kd10:2.19.9": "And when he said, “For hatred never ends through hatred; hatred only ends through love,” he was referring to your killing of my mother and father. ",
   "pli-tv-kd10:2.19.10": "For if I had killed you, those who wish you well would have killed me, and those who wish me well would in turn have killed them. ",
   "pli-tv-kd10:2.19.11": "In this way the hatred would never end through hatred. ",
-  "pli-tv-kd10:2.19.12": "But now you have spared my life and I’ve spared yours. ",
+  "pli-tv-kd10:2.19.12": "But now you’ve spared my life and I’ve spared yours. ",
   "pli-tv-kd10:2.19.13": "In this way hatred ends through love.’ ",
   "pli-tv-kd10:2.20.1": "The king thought, ",
   "pli-tv-kd10:2.20.2": "‘It’s amazing ",
