Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -261,7 +261,7 @@
   "pli-tv-kd10:2.19.5": "‘When he said, “Not long,” he meant, “Don’t harbor hate for a long time.” ",
   "pli-tv-kd10:2.19.7": "When he said, “Not short,” he meant, “Don’t hastily break with your friends.” ",
   "pli-tv-kd10:2.19.9": "And when he said, “For hatred never ends through hatred; hatred only ends through love,” he was referring to your killing of my mother and father. ",
-  "pli-tv-kd10:2.19.10": "For if I had killed you, those who wish you well would have killed me, and those who wish me well would in turn have killed them. ",
+  "pli-tv-kd10:2.19.10": "For if I had killed you, those who wish you well would’ve killed me, and those who wish me well would in turn have killed them. ",
   "pli-tv-kd10:2.19.11": "In this way the hatred would never end through hatred. ",
   "pli-tv-kd10:2.19.12": "But now you’ve spared my life and I’ve spared yours. ",
   "pli-tv-kd10:2.19.13": "In this way hatred ends through love.’ ",
