Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -256,7 +256,7 @@
   "pli-tv-kd10:2.18.11": "‘This is Prince Dīghāvu, the son of Dīghīti the King of Kosala. ",
   "pli-tv-kd10:2.18.12": "You shouldn’t do anything to harm him. ",
   "pli-tv-kd10:2.18.13": "I’ve spared his life and he’s spared mine.’ ",
-  "pli-tv-kd10:2.19.1": "Soon afterwards the King said to Dīghāvu, ",
+  "pli-tv-kd10:2.19.1": "Soon afterwards the king said to Dīghāvu, ",
   "pli-tv-kd10:2.19.2": "‘Dīghāvu, what’s the meaning of that which your father told you at the time of his death?’ ",
   "pli-tv-kd10:2.19.5": "‘When he said, “Not long,” he meant, “Don’t harbor hate for a long time.” ",
   "pli-tv-kd10:2.19.7": "When he said, “Not short,” he meant, “Don’t hastily break with your friends.” ",
