--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -246,7 +246,7 @@
   "pli-tv-kd10:2.18.1": "When he was back in Benares, the King gathered his court and said, ",
   "pli-tv-kd10:2.18.2": "‘If you saw Prince Dīghāvu, the son of Dīghīti the King of Kosala, what would you do to him?’ ",
   "pli-tv-kd10:2.18.3": "They variously replied, ",
-  "pli-tv-kd10:2.18.4": "‘Sir, we would cut off his hands;’ ",
+  "pli-tv-kd10:2.18.4": "‘Sir, we’d cut off his hands;’ ",
   "pli-tv-kd10:2.18.5": "‘We would cut off his feet;’ ",
   "pli-tv-kd10:2.18.6": "‘We would cut off both his hands and feet;’ ",
   "pli-tv-kd10:2.18.7": "‘We would cut off his ears;’ ",
