--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -248,9 +248,9 @@
   "pli-tv-kd10:2.18.3": "They variously replied, ",
   "pli-tv-kd10:2.18.4": "‘Sir, we’d cut off his hands;’ ",
   "pli-tv-kd10:2.18.5": "‘We’d cut off his feet;’ ",
-  "pli-tv-kd10:2.18.6": "‘We would cut off both his hands and feet;’ ",
-  "pli-tv-kd10:2.18.7": "‘We would cut off his ears;’ ",
-  "pli-tv-kd10:2.18.8": "‘We would cut off his nose;’ ",
+  "pli-tv-kd10:2.18.6": "‘We’d cut off both his hands and feet;’ ",
+  "pli-tv-kd10:2.18.7": "‘We’d cut off his ears;’ ",
+  "pli-tv-kd10:2.18.8": "‘We’d cut off his nose;’ ",
   "pli-tv-kd10:2.18.9": "‘We would cut off both his ears and nose;’ ",
   "pli-tv-kd10:2.18.10": "‘We would cut off his head.’ ",
   "pli-tv-kd10:2.18.11": "‘This is Prince Dīghāvu, the son of Dīghīti the King of Kosala. ",
