--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -251,9 +251,9 @@
   "pli-tv-kd10:2.18.6": "‘We’d cut off both his hands and feet;’ ",
   "pli-tv-kd10:2.18.7": "‘We’d cut off his ears;’ ",
   "pli-tv-kd10:2.18.8": "‘We’d cut off his nose;’ ",
-  "pli-tv-kd10:2.18.9": "‘We would cut off both his ears and nose;’ ",
-  "pli-tv-kd10:2.18.10": "‘We would cut off his head.’ ",
-  "pli-tv-kd10:2.18.11": "‘This is Prince Dīghāvu, the son of Dīghīti the King of Kosala. ",
+  "pli-tv-kd10:2.18.9": "‘We’d cut off both his ears and nose;’ ",
+  "pli-tv-kd10:2.18.10": "‘We’d cut off his head.’ ",
+  "pli-tv-kd10:2.18.11": "‘Well, this is Prince Dīghāvu, the son of Dīghīti the king of Kosala. ",
   "pli-tv-kd10:2.18.12": "You shouldn’t do anything to harm him. ",
   "pli-tv-kd10:2.18.13": "I’ve spared his life and he’s spared mine.’ ",
   "pli-tv-kd10:2.19.1": "Soon afterwards the king said to Dīghāvu, ",
