--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -226,7 +226,7 @@
   "pli-tv-kd10:2.16.30": "and the King said, ‘Just now, I dreamed that Prince Dīghāvu, the son of Dīghīti the King of Kosala, attacked me with a sword.’ ",
   "pli-tv-kd10:2.17.1": "Seizing the King’s head with his left hand and drawing his sword with his right hand, the Prince said to the King, ",
   "pli-tv-kd10:2.17.2": "‘Sir, I’m that Prince Dīghāvu, the son of Dīghīti the king of Kosala. ",
-  "pli-tv-kd10:2.17.3": "You have caused us much misfortune. ",
+  "pli-tv-kd10:2.17.3": "You’ve caused us much misfortune. ",
   "pli-tv-kd10:2.17.4": "You took our army, our vehicles and transport animals, and our country and wealth. ",
   "pli-tv-kd10:2.17.5": "You killed my mother and father. ",
   "pli-tv-kd10:2.17.6": "This is a good opportunity for me to take revenge.’ ",
