Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -229,14 +229,14 @@
   "pli-tv-kd10:2.17.3": "You’ve caused us much misfortune. ",
   "pli-tv-kd10:2.17.4": "You took our army, our vehicles and transport animals, and our country and wealth. ",
   "pli-tv-kd10:2.17.5": "You killed my mother and father. ",
-  "pli-tv-kd10:2.17.6": "This is a good opportunity for me to take revenge.’ ",
-  "pli-tv-kd10:2.17.7": "The King bowed down with his head at the Prince’s feet and said, ",
+  "pli-tv-kd10:2.17.6": "This is my chance to take revenge.’ ",
+  "pli-tv-kd10:2.17.7": "The king bowed down with his head at the prince’s feet and said, ",
   "pli-tv-kd10:2.17.8": "‘Dear Dīghāvu, please spare my life.’ ",
   "pli-tv-kd10:2.17.9": "‘Who am I to spare your life? ",
   "pli-tv-kd10:2.17.10": "Sir, it’s you who should spare mine.’ ",
   "pli-tv-kd10:2.17.11": "‘Well then, Dīghāvu, if you spare my life, I’ll spare yours.’ ",
-  "pli-tv-kd10:2.17.12": "The King and Dīghāvu spared each other’s lives. They shook hands and made a vow not to harm one another. ",
-  "pli-tv-kd10:2.17.13": "The King said to the Prince, ",
+  "pli-tv-kd10:2.17.12": "The king and Dīghāvu spared each other’s lives. They shook hands and made a vow not to harm one another. ",
+  "pli-tv-kd10:2.17.13": "The king said to the prince, ",
   "pli-tv-kd10:2.17.14": "‘Well then, Dīghāvu, harness the chariot and let’s go.’ ",
   "pli-tv-kd10:2.17.15": "He did as asked and said to the King, ",
   "pli-tv-kd10:2.17.16": "‘The chariot is ready. You may leave when you’re ready.’ ",
