--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -238,9 +238,9 @@
   "pli-tv-kd10:2.17.12": "The king and Dīghāvu spared each other’s lives. They shook hands and made a vow not to harm one another. ",
   "pli-tv-kd10:2.17.13": "The king said to the prince, ",
   "pli-tv-kd10:2.17.14": "‘Well then, Dīghāvu, harness the chariot and let’s go.’ ",
-  "pli-tv-kd10:2.17.15": "He did as asked and said to the King, ",
-  "pli-tv-kd10:2.17.16": "‘The chariot is ready. You may leave when you’re ready.’ ",
-  "pli-tv-kd10:2.17.17": "The King mounted the chariot ",
+  "pli-tv-kd10:2.17.15": "He did as asked and told to the king, ",
+  "pli-tv-kd10:2.17.16": "‘Sir, the chariot is ready. You may leave when you’re ready.’ ",
+  "pli-tv-kd10:2.17.17": "The king mounted the chariot, ",
   "pli-tv-kd10:2.17.18": "and the Prince drove it. ",
   "pli-tv-kd10:2.17.19": "And he drove it so that it soon rejoined the army. ",
   "pli-tv-kd10:2.18.1": "When he was back in Benares, the King gathered his court and said, ",
