Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -241,10 +241,10 @@
   "pli-tv-kd10:2.17.15": "He did as asked and told to the king, ",
   "pli-tv-kd10:2.17.16": "‘Sir, the chariot is ready. You may leave when you’re ready.’ ",
   "pli-tv-kd10:2.17.17": "The king mounted the chariot, ",
-  "pli-tv-kd10:2.17.18": "and the Prince drove it. ",
+  "pli-tv-kd10:2.17.18": "with the prince driving it. ",
   "pli-tv-kd10:2.17.19": "And he drove it so that it soon rejoined the army. ",
-  "pli-tv-kd10:2.18.1": "When he was back in Benares, the King gathered his court and said, ",
-  "pli-tv-kd10:2.18.2": "‘If you saw Prince Dīghāvu, the son of Dīghīti the King of Kosala, what would you do to him?’ ",
+  "pli-tv-kd10:2.18.1": "When he was back in Benares, the king gathered his court and said, ",
+  "pli-tv-kd10:2.18.2": "‘Now, let me ask you: if you saw Prince Dīghāvu, the son of Dīghīti the king of Kosala, what would you do to him?’ ",
   "pli-tv-kd10:2.18.3": "They variously replied, ",
   "pli-tv-kd10:2.18.4": "‘Sir, we’d cut off his hands;’ ",
   "pli-tv-kd10:2.18.5": "‘We’d cut off his feet;’ ",
