Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -212,7 +212,7 @@
   "pli-tv-kd10:2.16.10": "It would not be proper of me not to follow my father’s advice.’ And he returned the sword to its sheath. ",
   "pli-tv-kd10:2.16.11": "A second ",
   "pli-tv-kd10:2.16.18": "and a third time he had the same thoughts, ",
-  "pli-tv-kd10:2.16.19": "‘This King has caused us much misfortune. ",
+  "pli-tv-kd10:2.16.19": "",
   "pli-tv-kd10:2.16.20": "He took our army, our vehicles and transport animals, and our country and wealth. ",
   "pli-tv-kd10:2.16.21": "He killed my mother and father. ",
   "pli-tv-kd10:2.16.22": "This is a good opportunity for me to take revenge.’ And he drew his sword from its sheath. ",
