Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -213,7 +213,7 @@
   "pli-tv-kd10:2.16.11": "A second ",
   "pli-tv-kd10:2.16.18": "and a third time he had the same thoughts, ",
   "pli-tv-kd10:2.16.19": "",
-  "pli-tv-kd10:2.16.20": "He took our army, our vehicles and transport animals, and our country and wealth. ",
+  "pli-tv-kd10:2.16.20": "",
   "pli-tv-kd10:2.16.21": "He killed my mother and father. ",
   "pli-tv-kd10:2.16.22": "This is a good opportunity for me to take revenge.’ And he drew his sword from its sheath. ",
   "pli-tv-kd10:2.16.23": "And a second and a third time he had the same thoughts, ",
