--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -214,11 +214,11 @@
   "pli-tv-kd10:2.16.18": "and a third time he had the same thoughts, ",
   "pli-tv-kd10:2.16.19": "",
   "pli-tv-kd10:2.16.20": "",
-  "pli-tv-kd10:2.16.21": "He killed my mother and father. ",
-  "pli-tv-kd10:2.16.22": "This is a good opportunity for me to take revenge.’ And he drew his sword from its sheath. ",
-  "pli-tv-kd10:2.16.23": "And a second and a third time he had the same thoughts, ",
-  "pli-tv-kd10:2.16.24": "‘At the time of his death, my father said to me, “My dear Dīghāvu, see neither long nor short. ",
-  "pli-tv-kd10:2.16.25": "For hatred never ends through hatred; ",
+  "pli-tv-kd10:2.16.21": "",
+  "pli-tv-kd10:2.16.22": "",
+  "pli-tv-kd10:2.16.23": "",
+  "pli-tv-kd10:2.16.24": "",
+  "pli-tv-kd10:2.16.25": "",
   "pli-tv-kd10:2.16.26": "hatred only ends through love.” ",
   "pli-tv-kd10:2.16.27": "It would not be proper of me not to follow my father’s advice.’ And each time he ended up returning the sword to its sheath. ",
   "pli-tv-kd10:2.16.28": "Then King Brahmadatta suddenly got up, frightened and alarmed. ",
