--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -219,8 +219,8 @@
   "pli-tv-kd10:2.16.23": "",
   "pli-tv-kd10:2.16.24": "",
   "pli-tv-kd10:2.16.25": "",
-  "pli-tv-kd10:2.16.26": "hatred only ends through love.” ",
-  "pli-tv-kd10:2.16.27": "It would not be proper of me not to follow my father’s advice.’ And each time he ended up returning the sword to its sheath. ",
+  "pli-tv-kd10:2.16.26": "",
+  "pli-tv-kd10:2.16.27": "and each time he ended up returning the sword to its scabbard. ",
   "pli-tv-kd10:2.16.28": "Then King Brahmadatta suddenly got up, frightened and alarmed. ",
   "pli-tv-kd10:2.16.29": "The Prince asked what was the matter, ",
   "pli-tv-kd10:2.16.30": "and the King said, ‘Just now, I dreamed that Prince Dīghāvu, the son of Dīghīti the King of Kosala, attacked me with a sword.’ ",
