Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -221,10 +221,10 @@
   "pli-tv-kd10:2.16.25": "",
   "pli-tv-kd10:2.16.26": "",
   "pli-tv-kd10:2.16.27": "and each time he ended up returning the sword to its scabbard. ",
-  "pli-tv-kd10:2.16.28": "Then King Brahmadatta suddenly got up, frightened and alarmed. ",
-  "pli-tv-kd10:2.16.29": "The Prince asked what was the matter, ",
-  "pli-tv-kd10:2.16.30": "and the King said, ‘Just now, I dreamed that Prince Dīghāvu, the son of Dīghīti the King of Kosala, attacked me with a sword.’ ",
-  "pli-tv-kd10:2.17.1": "Seizing the King’s head with his left hand and drawing his sword with his right hand, the Prince said to the King, ",
+  "pli-tv-kd10:2.16.28": "Just then King Brahmadatta suddenly got up, frightened and alarmed. ",
+  "pli-tv-kd10:2.16.29": "The prince asked him what was the matter, ",
+  "pli-tv-kd10:2.16.30": "and the king said, ‘I just dreamed that Prince Dīghāvu, the son of Dīghīti the king of Kosala, attacked me with a sword.’ ",
+  "pli-tv-kd10:2.17.1": "Seizing the king’s head with his left hand and drawing his sword with his right hand, the prince said to the king, ",
   "pli-tv-kd10:2.17.2": "‘Sir, I’m that Prince Dīghāvu, the son of Dīghīti the king of Kosala. ",
   "pli-tv-kd10:2.17.3": "You’ve caused us much misfortune. ",
   "pli-tv-kd10:2.17.4": "You took our army, our vehicles and transport animals, and our country and wealth. ",
