Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -198,10 +198,10 @@
   "pli-tv-kd10:2.15.8": "When they had gone a long way, the King said to the Prince, ",
   "pli-tv-kd10:2.15.9": "‘Unharness the chariot. I’m tired and I want to lie down.’ ",
   "pli-tv-kd10:2.15.10": "He did as asked and then sat down cross-legged on the ground. ",
-  "pli-tv-kd10:2.15.11": "The King lay down, resting his head on the Prince’s lap. ",
+  "pli-tv-kd10:2.15.11": "The king lay down, resting his head on the prince’s lap. ",
   "pli-tv-kd10:2.15.12": "And because he was tired, he quickly fell asleep. ",
-  "pli-tv-kd10:2.16.1": "The Prince thought, ",
-  "pli-tv-kd10:2.16.2": "‘This King has caused us much misfortune. ",
+  "pli-tv-kd10:2.16.1": "The prince thought, ",
+  "pli-tv-kd10:2.16.2": "‘This king has caused us much misfortune. ",
   "pli-tv-kd10:2.16.3": "He took our army, our vehicles and transport animals, and our country and wealth. ",
   "pli-tv-kd10:2.16.4": "He killed my mother and father. ",
   "pli-tv-kd10:2.16.5": "This is a good opportunity for me to take revenge.’ And he drew his sword from its sheath. ",
