Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -204,12 +204,12 @@
   "pli-tv-kd10:2.16.2": "‘This king has caused us much misfortune. ",
   "pli-tv-kd10:2.16.3": "He took our army, our vehicles and transport animals, and our country and wealth. ",
   "pli-tv-kd10:2.16.4": "He killed my mother and father. ",
-  "pli-tv-kd10:2.16.5": "This is a good opportunity for me to take revenge.’ And he drew his sword from its sheath. ",
+  "pli-tv-kd10:2.16.5": "This is my chance to take revenge.’ And he drew his sword from its scabbard. ",
   "pli-tv-kd10:2.16.6": "He then thought, ",
   "pli-tv-kd10:2.16.7": "‘At the time of his death, my father said to me, “My dear Dīghāvu, see neither long nor short. ",
   "pli-tv-kd10:2.16.8": "For hatred never ends through hatred; ",
   "pli-tv-kd10:2.16.9": "hatred only ends through love.” ",
-  "pli-tv-kd10:2.16.10": "It would not be proper of me not to follow my father’s advice.’ And he returned the sword to its sheath. ",
+  "pli-tv-kd10:2.16.10": "It wouldn’t be right for me to ignore my father’s advice.’ And he returned the sword to its scabbard. ",
   "pli-tv-kd10:2.16.11": "A second ",
   "pli-tv-kd10:2.16.18": "and a third time he had the same thoughts, ",
   "pli-tv-kd10:2.16.19": "",
