--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -192,7 +192,7 @@
   "pli-tv-kd10:2.15.2": "‘Harness a chariot and we’ll go hunting.’ ",
   "pli-tv-kd10:2.15.3": "He did as asked and said to the King, ",
   "pli-tv-kd10:2.15.4": "‘Sir, the chariot is ready. You may leave when you’re ready.’ ",
-  "pli-tv-kd10:2.15.5": "The King then mounted the chariot ",
+  "pli-tv-kd10:2.15.5": "The king then mounted that chariot, ",
   "pli-tv-kd10:2.15.6": "and the Prince drove it. ",
   "pli-tv-kd10:2.15.7": "But he drove it away from the army. ",
   "pli-tv-kd10:2.15.8": "When they had gone a long way, the King said to the Prince, ",
